--- a/index.html
+++ b/index.html
@@ -1,143 +1,131 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Yohoho - плееры и торренты для киносайта онлайн кинотеатра</title>
-    <meta name="description" content="Где взять плеер для киносайта? Как вставить embed-код в онлайн кинотеатр? Найти iframe плееры сериалов и тв-передач с автоматическим обновлением?">
+  <title>Yohoho - плееры и торренты для киносайта онлайн кинотеатра</title>
+  <meta name="description"
+    content="Yohoho - это сайт-агрегатор всех открытых и закрытых видео-хостингов и торрент-трекеров рунета на наличие новых фильмов и сериалов.">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+  <meta name="apple-mobile-web-app-title" content="Yohoho">
+  <meta name="application-name" content="Yohoho">
+  <meta name="theme-color" content="#2a3440">
 
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
-    <meta name="apple-mobile-web-app-title" content="Yohoho">
-    <meta name="application-name" content="Yohoho">
-    <meta name="theme-color" content="#2a3440">
-
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-
-    <style>
-        .index,.contact,.webmaster,body{background:#2A3440;font-family:Neucha,sans-serif;color:#fff;margin:50px auto 60px;font-size:14px}.index,.play{overflow:hidden}.online{overflow-x:hidden}.play,.play iframe,.play .col-xs-12{width:100%}.play,.play iframe,.play .col-xs-12,.online,.online iframe,.online .col-xs-12,.online .col-sm-6,.online .col-lg-4,.torrent{margin:0;padding:0;border:0}a{text-decoration:none;outline:none}a .disabled{pointer-events:none;cursor:default}.navbar{z-index:3;border:0}.navbar-inverse{background:#27313e}.navbar-inverse .navbar-brand{font-weight:700;text-shadow:1px 1px 2px #000,0 0 1em #5bb8cc;font-size:20px}.navbar-inverse .navbar-brand:first-letter{text-transform:uppercase}.navbar-inverse .navbar-toggle:focus,.navbar-inverse .navbar-toggle:hover{background-color:#232c36}.footer{z-index:3;position:absolute;bottom:0;width:100%;height:50px;background-color:#27313e}.container .text-muted{margin:15px 0}.container .text-muted span{color:#ccc}.index-background{position:absolute;z-index:2;top:0;left:0;width:100%;height:100%;background:#2A3440;opacity:.6}.index-seo{color:#999;text-align:justify}.search-line{z-index:3;position:absolute!important;left:50%;top:40%;margin-left:-325px!important;margin-top:-100px!important;width:650px}.search-line .brand{color:#fff;font-size:70px;font-weight:700;margin:0 auto;text-align:center;text-shadow:1px 1px 2px #000,0 0 1em #5bb8cc}.search-line .brand:first-letter{text-transform:uppercase}.search-line .form{margin:20px auto;width:100%;text-align:center}.search-line .form input,.moderator input,.moderator textarea,.movie-soc textarea{color:#fff;background:#27313e;border:2px #2f3a46 solid;border-radius:5px;padding:15px;margin:30px auto 0;font-size:16px}.search-line input:hover,.moderator input:hover,.moderator textarea:hover,.movie-soc textarea:hover{border:2px #27313e solid;background:#2f3a46}a{color:#fff}a:hover{color:#fff;text-decoration:none;outline:none}a:focus{color:#ccc;text-decoration:none;outline:none}.player .buttons{position:absolute;bottom:0;left:0;margin:0 8px 8px;z-index:1;opacity:.6}.player .buttons:hover{opacity:.9}.player .title{margin:7px 10px 0}.player .translate,.player .seasons{margin:0 10px}.btn{border-radius:0!important;background:rgba(0,0,0,0.4)!important;padding:6px 0!important;overflow:hidden}.btn-group-justified .btn-group{padding:2px!important}@media only screen and (max-width: 768px){.footer,.navbar,.index-seo{display:none}.search-line{left:0;top:0;margin:0!important;width:100%}}::-webkit-input-placeholder{color:#999}::-moz-placeholder{color:#999}:-ms-input-placeholder{color:#999}:-moz-placeholder{color:#999}
-    </style>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
+
 <body class="index">
-
-<nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Навигация</span> <span class="icon-bar"></span> <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="./">Yohoho</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a href="https://github.com/4h0y/4h0y.github.io" target="_blank">GitHub</a>
-                </li>
-                <li>
-                    <a href="https://gitlab.com/4h0y/4h0y.gitlab.io" target="_blank">GitLab</a>
-                </li>
-            </ul>
-        </div>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+          aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Навигация</span> <span class="icon-bar"></span> <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="./index.html">Yohoho</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="https://github.com/dsedinkin/yohoho" target="_blank">GitHub</a>
+          </li>
+        </ul>
+      </div>
     </div>
-</nav>
+  </nav>
 
-<div class="index-background"></div>
-
-<div class="search-line">
+  <div class="search-line">
     <div id="yohoho" data-tv="1" data-resize="1">
-        <div class="brand">Yohoho</div>
-        <div id="donate-hide" class="form">
-            <input type="text" placeholder="Название фильма / ID КиноПоиск" id="search-title" name="title" style="width: 250px">
-            <input type="button" id="search" value="Найти">
-        </div>
+      <div class="brand">Yohoho</div>
+      <div id="donate-hide" class="form">
+        <input type="text" placeholder="Название фильма / ID КиноПоиск" autocomplete="off" id="search-title"
+          name="title" style="width: 250px">
+        <input type="button" id="search" value="Найти">
+      </div>
     </div>
-</div>
+  </div>
 
-<script src="./yo.js"></script>
+  <script src="./yo.js"></script>
 
-<footer class="footer">
+  <footer class="footer">
     <div class="container">
-        <p class="text-muted">Онлайн и торренты <span id="count">335 201</span> фильмов и сериалов.</p>
+      <p class="text-muted">Зеркало сайта <a href="https://yohoho.cc/" target="_blank">yohoho.cc</a></p>
     </div>
-</footer>
+  </footer>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
-<script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
+  <script>
     WebFont.load({
-        google: {
-            families: ['Neucha']
-        }
+      google: {
+        families: ["Neucha"]
+      }
     });
-</script>
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        var search = document.querySelector('#search');
-        var title = document.querySelector('#search-title');
+  </script>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      var search = document.querySelector("#search");
+      var title = document.querySelector("#search-title");
 
-        if (window.location.hash) {
-            var hash = window.location.hash.substring(1);
-            if (title && hash) {
-                title.value = decodeURIComponent(hash);
-                return parse();
-            }
-        }
+      if (window.location.hash) {
+        var hash = window.location.hash.substring(1);
+        if (title && hash) {
+          title.value = decodeURIComponent(hash);
+          return parse();
+        };
+      };
 
-        if (search) {
-            search.addEventListener('click', function () {
-              return parse();
-            });
-        }
+      if (search) {
+        search.addEventListener("click", () => {
+          return parse();
+        });
+      };
 
-        if (title) {
-            title.addEventListener('keyup', function (event) {
-                event.preventDefault();
-                if (event.keyCode === 13) {
-                  return parse();
-                }
-            });
-        }
+      if (title) {
+        title.addEventListener("keyup", (event) => {
+          event.preventDefault();
+          if (event.keyCode === 13) {
+            return parse();
+          };
+        });
+      };
 
-        function parse() {
-            var yohoho = document.querySelector('#yohoho');
-            if (title && title.value && yohoho) {
-                if (/kinopoisk\.ru/i.test(title.value)) {
-                    var exec = /(film\/|movie\/).*?([0-9]{3,7})\//gi.exec(title.value);
-                    if (exec && exec[2]) {
-                        yohoho.dataset.kinopoisk = exec[2];
-                        // if (window.location.hostname === 'yohoho.cc') {
-                        //     window.location.href = 'https://4h0y.gitlab.io/#' + yohoho.dataset.kinopoisk;
-                        //     return;
-                        // }
-                        window.location.hash = '#' + yohoho.dataset.kinopoisk;
-                        document.title = 'КиноПоиск: ' + yohoho.dataset.kinopoisk;
-                    }
-                } else if (/^\d+$/.test(title.value)) {
-                    yohoho.dataset.kinopoisk = title.value;
-                    // if (window.location.hostname === 'yohoho.cc') {
-                    //     window.location.href = 'https://4h0y.gitlab.io/#' + yohoho.dataset.kinopoisk;
-                    //     return;
-                    // }
-                    window.location.hash = '#' + yohoho.dataset.kinopoisk;
-                    document.title = 'КиноПоиск: ' + yohoho.dataset.kinopoisk;
-                } else {
-                    yohoho.dataset.title = encodeURIComponent(title.value);
-                    // if (window.location.hostname === 'yohoho.cc') {
-                    //     window.location.href = 'https://4h0y.gitlab.io/#' + yohoho.dataset.title;
-                    //     return;
-                    // }
-                    window.location.hash = '#' + yohoho.dataset.title;
-                    document.title = title.value;
-                }
-                items = [];
-                return yo();
-            }
-        }
+      const parse = () => {
+        var yohoho = document.querySelector("#yohoho");
+        if (title && title.value && yohoho) {
+          if (/kinopoisk\.ru/i.test(title.value)) {
+            var exec = /(film\/|movie\/).*?([0-9]{3,7})\//gi.exec(title.value);
+            if (exec && exec[2]) {
+              yohoho.dataset.kinopoisk = exec[2];
+              window.location.hash = "#" + yohoho.dataset.kinopoisk;
+              document.title = "КиноПоиск: " + yohoho.dataset.kinopoisk;
+            };
+          } else if (/^\d+$/.test(title.value)) {
+            yohoho.dataset.kinopoisk = title.value;
+            window.location.hash = "#" + yohoho.dataset.kinopoisk;
+            document.title = "КиноПоиск: " + yohoho.dataset.kinopoisk;
+          } else {
+            yohoho.dataset.title = encodeURIComponent(title.value);
+            window.location.hash = "#" + yohoho.dataset.title;
+            document.title = title.value;
+          };
+          items = [];
+        };
+      };
     });
-</script>
+
+    window.addEventListener("hashchange", (e) => {
+      console.log({ "hashchange": window.location.hash });
+      return yo();
+    });
+  </script>
 
 </body>
+
 </html>
