--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         var hash = window.location.hash.substring(1);
         if (title && hash) {
           title.value = decodeURIComponent(hash);
-          return parse();
+          return yo();
         };
       };
 
@@ -104,16 +104,13 @@
             if (exec && exec[2]) {
               yohoho.dataset.kinopoisk = exec[2];
               window.location.hash = "#" + yohoho.dataset.kinopoisk;
-              document.title = "КиноПоиск: " + yohoho.dataset.kinopoisk;
             };
           } else if (/^\d+$/.test(title.value)) {
             yohoho.dataset.kinopoisk = title.value;
             window.location.hash = "#" + yohoho.dataset.kinopoisk;
-            document.title = "КиноПоиск: " + yohoho.dataset.kinopoisk;
           } else {
             yohoho.dataset.title = encodeURIComponent(title.value);
             window.location.hash = "#" + yohoho.dataset.title;
-            document.title = title.value;
           };
           items = [];
         };
@@ -121,8 +118,7 @@
     });
 
     window.addEventListener("hashchange", (e) => {
-      console.log({ "hashchange": window.location.hash });
-      return yo();
+      window.location.reload();
     });
   </script>
 
