--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <span class="sr-only">Навигация</span> <span class="icon-bar"></span> <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="./index.html">Yohoho</a>
+        <a class="navbar-brand" href="./">Yohoho</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
